--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
 	"minimum-stability" : "dev",
 	"autoload" : {
 		"psr-0" : {
-			"SK\\ITC\\MonitorBundle" : "src/"
+			"SK\\ITC\\MonitorBundle\\" : "src/"
 		}
 	},
 	"bin" : [
@@ -33,9 +33,36 @@
 	"require" : {
 		"php" : ">=5.5.0"
 	},
+	"require-dev" : {
+		"sk.itcloud.symfony/itc-bundle" : "dev-master"
+	},
 	"repositories" : [{
 			"type" : "vcs",
+			"url" : "git@github.com:slavomirkuzma/itc-bundle.git"
+		}, {
+			"type" : "vcs",
 			"url" : "git@github.com:slavomirkuzma/itc-monitor-bundle.git"
+		}, {
+			"type" : "vcs",
+			"url" : "git@github.com:slavomirkuzma/itc-dokuwiki-bundle.git"
+		}, {
+			"type" : "vcs",
+			"url" : "git@github.com:slavomirkuzma/php-raml-parser.git"
+		}, {
+			"type" : "vcs",
+			"url" : "git@github.com:slavomirkuzma/api2symfony.git"
+		}, {
+			"type" : "vcs",
+			"url" : "git@github.com:slavomirkuzma/api2symfony-bundle.git"
+		}, {
+			"type" : "vcs",
+			"url" : "git@github.com:slavomirkuzma/log-subscriber.git"
+		}, {
+			"type" : "vcs",
+			"url" : "git@github.com:slavomirkuzma/PHPExcel.git"
+		}, {
+			"type" : "vcs",
+			"url" : "git@github.com:slavomirkuzma/WebSocketBundle.git"
 		}
 	]
 }
